added protection to routes using bearer auth, added jwt middleware, and login access token setup
